fix overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,15 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  margin-bottom: 20%;
+  overflow: hidden;
+}
+
+.issue3-scene2 {
+  position: relative;
+  width: 1988px;
+  max-width: 100%;
+  height: auto;
+  aspect-ratio: 1571 / 300;
 }
 
 .issue3-scene .wall {
@@ -77,7 +85,7 @@
 .pouch-title-box {
   position: absolute;
   width: 43%;
-  top: 95%;
+  bottom: 50%;
   left: 0;
   display: flex;
   flex-direction: column;
@@ -116,20 +124,20 @@
 }
 
 .center-stage .flower-1 {
-  bottom: -5%;
+  top: -5%;
   left: 7%;
   width: 4%;
 }
 
 .center-stage .flower-2 {
-  bottom: -55%;
+  top: 35%;
   right: 7%;
   width: 3%;
 }
 
 .bunny {
   position: absolute;
-  top: 33%;
+  bottom: 33%;
   right: 0;
   background-image: url(/images/issue3/pouch-journaling-header.png);
   background-size: contain;
@@ -148,9 +156,38 @@
   animation-name: run;
   animation-duration: 500s;
   animation-delay: -300s;
-
-  /* animation-duration: 5s; */
   transform: scaleX(1);
+}
+
+@keyframes run {
+  0% {
+    right: -8%;
+    top: 0;
+    transform: scaleX(1);
+  }
+  12%,
+  37%,
+  62%,
+  87% {
+    top: 4%;
+  }
+  25%,
+  75% {
+    top: 0;
+  }
+  50% {
+    top: 0;
+    right: 100%;
+    transform: scaleX(1);
+  }
+  52% {
+    transform: scaleX(-1);
+  }
+  100% {
+    top: 0;
+    right: -8%;
+    transform: scaleX(-1);
+  }
 }
 
 .skybunny {
@@ -412,36 +449,7 @@
   text-align: center;
 }
 
-@keyframes run {
-  0% {
-    right: -8%;
-    top: 0;
-    transform: scaleX(1);
-  }
-  12%,
-  37%,
-  62%,
-  87% {
-    top: 4%;
-  }
-  25%,
-  75% {
-    top: 0;
-  }
-  50% {
-    top: 0;
-    right: 100%;
-    transform: scaleX(1);
-  }
-  52% {
-    transform: scaleX(-1);
-  }
-  100% {
-    top: 0;
-    right: -8%;
-    transform: scaleX(-1);
-  }
-}
+
 
 @media (max-width: 900px) {
   .skybunny-box {
